2005-11-19  Mickael Remond  <mickael.remond@process-one.net>

	* contrib/extract_translations/prepare-translation.sh: Added wrapper to
	extract_translation.erl (thanks to Badlod).

2005-11-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard.erl: Fixed xmlns in disco items replies (thanks to
	Maxim Ryazanov)
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise

	* src/tls/Makefile.in: Use CPPFLAGS (thanks to Magnus Henoch)

2005-11-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_in.erl: Support for dNSName certificate field
	and DNS name matching
	* src/XmppAddr.asn1: Moved here from src/tls/XmppAddr.asn1
	* src/tls/XmppAddr.asn1: Likewise    
	* src/Makefile.in: Updated
	* src/tls/Makefile.in: Updated

2005-11-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/ejabberd_odbc.erl: Support for mnesia-like transaction
	interface
	* src/mod_roster_odbc.erl: Updated to use
	ejabberd_odbc:sql_transaction/2

2005-11-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Fixed invalid behaviour upon
	connecting to host with invalid domain
	* src/ejabberd_s2s.erl: Likewise

2005-11-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_config.erl: Support for per host certificates
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd.cfg.example: Updated

	* src/ejabberd_s2s_in.erl: Fixed id-on-xmppAddr processing

2005-11-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_disco.erl: Fixed extra_domains option processing

	* src/ejabberd_s2s_out.erl: Support for STARTTLS+SASL EXTERNAL
	(not well-tested yet)
	* src/ejabberd_s2s_in.erl: Likewise
	* src/tls/tls.erl: Likewise
	* src/tls/tls_drv.c: Likewise
	* src/tls/XmppAddr.asn1: Likewise
	* src/tls/Makefile.in: Likewise

2005-10-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_disco.erl: Minor fix

2005-10-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Bugfix
