@@ -1,7 +1,12 @@
+2005-11-22  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_c2s.erl: Send stream error when connection is
+	replaced (thanks to Maxim Ryazanov)
+
 2005-11-19  Mickael Remond  <mickael.remond@process-one.net>
 
-	* contrib/extract_translations/prepare-translation.sh: Added wrapper to
-	extract_translation.erl (thanks to Badlod).
+	* contrib/extract_translations/prepare-translation.sh: Added
+	wrapper to extract_translation.erl (thanks to Badlop)
 
 2005-11-19  Alexey Shchepin  <alexey@sevcom.net>
 
